Keep trying to fix scroll issue on iPhone and iPad

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -648,7 +648,72 @@ ul {
   #home-page-container #home {
     background: url("/img/Home/Layer 2.svg") no-repeat left top, url("/img/Home/Layer 3.svg") no-repeat left top fixed, url("/img/Home/spring-small-compressed.jpg") no-repeat left top fixed;
     height: 100%;
-    background-size: cover; }
+    background-size: cover;
+    position: relative; }
+    #home-page-container #home .text {
+      display: none; }
+    @media (max-width: 405px) {
+      #home-page-container #home {
+        background: url("/img/Home/Layer 3.svg") no-repeat left top fixed, url("/img/Home/spring-small-compressed.jpg") no-repeat left top fixed;
+        background-size: cover, cover;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center; }
+        #home-page-container #home .text {
+          display: block;
+          padding: 0 37px; }
+          #home-page-container #home .text img {
+            width: 100%; } }
+    #home-page-container #home .cover {
+      background: black;
+      opacity: 0.4;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      position: fixed; }
+    #home-page-container #home .arrow {
+      -webkit-animation-name: arrow;
+      animation-name: arrow;
+      -webkit-animation-duration: 1.2s;
+      animation-duration: 1.2s;
+      -webkit-animation-iteration-count: infinite;
+      animation-iteration-count: infinite; }
+
+@-webkit-keyframes arrow {
+  0% {
+    bottom: 15px; }
+  50% {
+    bottom: 25px; }
+  100% {
+    bottom: 15px; } }
+
+@keyframes arrow {
+  0% {
+    bottom: 15px; }
+  50% {
+    bottom: 25px; }
+  100% {
+    bottom: 15px; } }
+    #home-page-container #home a {
+      color: inherit; }
+    #home-page-container #home .arrow {
+      position: absolute;
+      bottom: 15px;
+      left: 0;
+      right: 0;
+      margin: auto;
+      font-size: 40px;
+      width: 35px;
+      cursor: pointer;
+      color: black;
+      opacity: .55;
+      z-index: 9; }
 
 #welcome {
   background: url("/img/Home/spring-small-compressed.jpg") no-repeat left top fixed;
@@ -725,7 +790,7 @@ ul {
             font-size: 40px; } }
       #welcome .scrollbar-container .text p {
         margin-bottom: 31px; }
-        @media (max-width: 768px) {
+        @media (max-width: 1100px) {
           #welcome .scrollbar-container .text p {
             font-size: 18px;
             margin-bottom: 15px; } }
@@ -737,9 +802,18 @@ ul {
       width: 480px;
       border-radius: 50%;
       height: 480px; }
+      @media (max-width: 1100px) {
+        #welcome .img-container img {
+          width: 400px;
+          height: 400px; } }
     @media (max-width: 1000px) {
       #welcome .img-container {
         display: none; } }
+  @media (max-width: 768px) {
+    #welcome .scrollbar-container .text p {
+      font-size: 26px; }
+    #welcome .scrollbar-container .img-container {
+      display: none; } }
 
 .services a {
   color: #41b920; }
