--- a/resources/assets/sass/pages/_welcome.scss
+++ b/resources/assets/sass/pages/_welcome.scss
@@ -49,7 +49,7 @@
             }
             p {
                 margin-bottom: 31px;
-                @media (max-width: 768px) {
+                @media (max-width: 1100px) {
                     font-size: 18px;
                     margin-bottom: 15px;
                 }
@@ -65,22 +65,26 @@
             width: 480px;
             border-radius: 50%;
             height: 480px;
+            @media (max-width: 1100px) {
+                width: 400px;
+                height: 400px;
+            }
         }
         @media (max-width: 1000px) {
             display: none;
         }
     }
 
-    //@media (max-width: 768px) {
-    //    .scrollbar-container {
-    //        .text {
-    //            p {
-    //                font-size: 26px;
-    //            }
-    //        }
-    //        .img-container {
-    //            display: none;
-    //        }
-    //    }
-    //}
+    @media (max-width: 768px) {
+        .scrollbar-container {
+            .text {
+                p {
+                    font-size: 26px;
+                }
+            }
+            .img-container {
+                display: none;
+            }
+        }
+    }
 }
